force-app/main/default/objects/Email_Service_Pattern_Rules__c/Email_Service_Pattern_Rules__c.object-meta.xml
<CustomObject>
    <label>Email Service Pattern Rule</label>
    <nameField>
        <label>Rule</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Service Pattern Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>