force-app/main/default/objects/Email_Service_Pattern_Rules__c/fields/Apply_Empty_Result__c.field-meta.xml
<CustomField>
    <fullName>Apply_Empty_Result__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Apply rule even if regex match result is blank</inlineHelpText>
    <label>Apply Empty Result</label>
    <type>Checkbox</type>
</CustomField>