force-app/main/default/objects/Email_Service_Pattern_Rules__c/fields/Destination_Value_Field__c.field-meta.xml
<CustomField>
    <fullName>Destination_Value_Field__c</fullName>
    <label>Destination Value Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>