force-app/main/default/objects/Email_Service_Pattern_Rules__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>Group</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>