force-app/main/default/objects/Email_Service_Pattern_Rules__c/fields/Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Id__c</fullName>
    <label>Email Services Function</label>
    <referenceTo>Email_Services_Function__c</referenceTo>
    <relationshipLabel>Email Service Pattern Rules</relationshipLabel>
    <relationshipName>Email_Service_Pattern_Rules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>