force-app/main/default/objects/Email_Service_Pattern_Rules__c/fields/Pattern__c.field-meta.xml
<CustomField>
    <fullName>Pattern__c</fullName>
    <label>Pattern</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>