force-app/main/default/objects/Email_Service_Pattern_Rules__c/fields/Search_In__c.field-meta.xml
<CustomField>
    <fullName>Search_In__c</fullName>
    <label>Search In</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Subject</fullName>
            </value>
            <value>
                <fullName>Header</fullName>
            </value>
            <value>
                <fullName>Body</fullName>
            </value>
            <value>
                <fullName>Subject &amp; Body</fullName>
            </value>
            <value>
                <fullName>Subject &amp; Body &amp; Header</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>